src/utils/bicep/.antlr/bicepParser.java
// Generated from /Users/ivanovhr/wirk/sit-paas/api/sla/editor/src/utils/bicep/bicep.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class bicepParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DISABLE_NEXT_LINE_DIAGNOSTIC_DIRECTIVE=1, SINGLE_LINE_COMMENT=2, MULTI_LINE_COMMENT=3, 
		MULTILINE_STRING=4, STRING_LEFT_PIECE=5, STRING_MIDDLE_PIECE=6, STRING_RIGHT_PIECE=7, 
		STRING_COMPLETE=8, ARROW=9, AT=10, COMMA=11, PIPE=12, STAR_COL=13, OBRACK=14, 
		CBRACK=15, OPAR=16, CPAR=17, DOT=18, NOT=19, MUL=20, DIV=21, MOD=22, ADD=23, 
		MIN=24, GT=25, GTE=26, LT=27, LTE=28, EQ=29, NEQ=30, AND=31, OR=32, COALESCE=33, 
		QMARK=34, COL=35, ASSIGN=36, OBRACE=37, CBRACE=38, IMPORT=39, WITH=40, 
		AS=41, METADATA=42, PARAM=43, RESOURCE=44, MODULE=45, OUTPUT=46, EXISTING=47, 
		TYPE=48, VAR=49, IF=50, FOR=51, IN=52, TRUE=53, FALSE=54, NULL=55, TARGET_SCOPE=56, 
		STRING=57, INT=58, BOOL=59, ARRAY=60, OBJECT=61, IDENTIFIER=62, NUMBER=63, 
		NL=64, SPACES=65, UNKNOWN=66;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_targetScopeDecl = 2, RULE_importDecl = 3, 
		RULE_importWithClause = 4, RULE_importAsClause = 5, RULE_metadataDecl = 6, 
		RULE_parameterDecl = 7, RULE_parameterDefaultValue = 8, RULE_typeDecl = 9, 
		RULE_variableDecl = 10, RULE_resourceDecl = 11, RULE_moduleDecl = 12, 
		RULE_outputDecl = 13, RULE_decorator = 14, RULE_expression = 15, RULE_binaryExpression = 16, 
		RULE_equalityExpression = 17, RULE_relationalExpression = 18, RULE_additiveExpression = 19, 
		RULE_multiplicativeExpression = 20, RULE_unaryExpression = 21, RULE_unaryOperator = 22, 
		RULE_memberExpression = 23, RULE_primaryExpression = 24, RULE_decoratorExpression = 25, 
		RULE_functionCall = 26, RULE_argumentList = 27, RULE_parenthesizedExpression = 28, 
		RULE_lambdaExpression = 29, RULE_ifCondition = 30, RULE_forExpression = 31, 
		RULE_forVariableBlock = 32, RULE_forBody = 33, RULE_interpString = 34, 
		RULE_literalValue = 35, RULE_object = 36, RULE_objectProperty = 37, RULE_array = 38, 
		RULE_arrayItem = 39, RULE_typeExpression = 40, RULE_singularTypeExpression = 41, 
		RULE_primaryTypeExpression = 42, RULE_ambientTypeReference = 43, RULE_objectType = 44, 
		RULE_objectTypeProperty = 45, RULE_objectTypeAdditionalPropertiesMatcher = 46, 
		RULE_tupleType = 47, RULE_tupleItem = 48, RULE_parenthesizedTypeExpression = 49, 
		RULE_identifier = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "targetScopeDecl", "importDecl", "importWithClause", 
			"importAsClause", "metadataDecl", "parameterDecl", "parameterDefaultValue", 
			"typeDecl", "variableDecl", "resourceDecl", "moduleDecl", "outputDecl", 
			"decorator", "expression", "binaryExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "unaryOperator", "memberExpression", "primaryExpression", 
			"decoratorExpression", "functionCall", "argumentList", "parenthesizedExpression", 
			"lambdaExpression", "ifCondition", "forExpression", "forVariableBlock", 
			"forBody", "interpString", "literalValue", "object", "objectProperty", 
			"array", "arrayItem", "typeExpression", "singularTypeExpression", "primaryTypeExpression", 
			"ambientTypeReference", "objectType", "objectTypeProperty", "objectTypeAdditionalPropertiesMatcher", 
			"tupleType", "tupleItem", "parenthesizedTypeExpression", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'=>'", "'@'", 
			"','", "'|'", "'*:'", "'['", "']'", "'('", "')'", "'.'", "'!'", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", 
			"'&&'", "'OR'", "'??'", "'?'", "':'", "'='", "'{'", "'}'", "'import'", 
			"'with'", "'as'", "'metadata'", "'param'", "'resource'", "'module'", 
			"'output'", "'existing'", "'type'", "'var'", "'if'", "'for'", "'in'", 
			"'true'", "'false'", "'null'", "'targetScope'", "'string'", "'int'", 
			"'bool'", "'array'", "'object'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DISABLE_NEXT_LINE_DIAGNOSTIC_DIRECTIVE", "SINGLE_LINE_COMMENT", 
			"MULTI_LINE_COMMENT", "MULTILINE_STRING", "STRING_LEFT_PIECE", "STRING_MIDDLE_PIECE", 
			"STRING_RIGHT_PIECE", "STRING_COMPLETE", "ARROW", "AT", "COMMA", "PIPE", 
			"STAR_COL", "OBRACK", "CBRACK", "OPAR", "CPAR", "DOT", "NOT", "MUL", 
			"DIV", "MOD", "ADD", "MIN", "GT", "GTE", "LT", "LTE", "EQ", "NEQ", "AND", 
			"OR", "COALESCE", "QMARK", "COL", "ASSIGN", "OBRACE", "CBRACE", "IMPORT", 
			"WITH", "AS", "METADATA", "PARAM", "RESOURCE", "MODULE", "OUTPUT", "EXISTING", 
			"TYPE", "VAR", "IF", "FOR", "IN", "TRUE", "FALSE", "NULL", "TARGET_SCOPE", 
			"STRING", "INT", "BOOL", "ARRAY", "OBJECT", "IDENTIFIER", "NUMBER", "NL", 
			"SPACES", "UNKNOWN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bicep.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bicepParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(bicepParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & 18085725568237569L) != 0)) {
				{
				{
				setState(102);
				statement();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TargetScopeDeclContext targetScopeDecl() {
			return getRuleContext(TargetScopeDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public MetadataDeclContext metadataDecl() {
			return getRuleContext(MetadataDeclContext.class,0);
		}
		public ParameterDeclContext parameterDecl() {
			return getRuleContext(ParameterDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public VariableDeclContext variableDecl() {
			return getRuleContext(VariableDeclContext.class,0);
		}
		public ResourceDeclContext resourceDecl() {
			return getRuleContext(ResourceDeclContext.class,0);
		}
		public ModuleDeclContext moduleDecl() {
			return getRuleContext(ModuleDeclContext.class,0);
		}
		public OutputDeclContext outputDecl() {
			return getRuleContext(OutputDeclContext.class,0);
		}
		public TerminalNode NL() { return getToken(bicepParser.NL, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				targetScopeDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				importDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				metadataDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				parameterDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				typeDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				variableDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				resourceDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				moduleDecl();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				outputDecl();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				match(NL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetScopeDeclContext extends ParserRuleContext {
		public TerminalNode TARGET_SCOPE() { return getToken(bicepParser.TARGET_SCOPE, 0); }
		public TerminalNode ASSIGN() { return getToken(bicepParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TargetScopeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetScopeDecl; }
	}

	public final TargetScopeDeclContext targetScopeDecl() throws RecognitionException {
		TargetScopeDeclContext _localctx = new TargetScopeDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_targetScopeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(TARGET_SCOPE);
			setState(123);
			match(ASSIGN);
			setState(124);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public InterpStringContext specification;
		public TerminalNode IMPORT() { return getToken(bicepParser.IMPORT, 0); }
		public TerminalNode NL() { return getToken(bicepParser.NL, 0); }
		public InterpStringContext interpString() {
			return getRuleContext(InterpStringContext.class,0);
		}
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public ImportWithClauseContext importWithClause() {
			return getRuleContext(ImportWithClauseContext.class,0);
		}
		public ImportAsClauseContext importAsClause() {
			return getRuleContext(ImportAsClauseContext.class,0);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(126);
				decorator();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(IMPORT);
			setState(133);
			((ImportDeclContext)_localctx).specification = interpString();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(134);
				importWithClause();
				}
			}

			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(137);
				importAsClause();
				}
			}

			setState(140);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportWithClauseContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(bicepParser.WITH, 0); }
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ImportWithClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importWithClause; }
	}

	public final ImportWithClauseContext importWithClause() throws RecognitionException {
		ImportWithClauseContext _localctx = new ImportWithClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importWithClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(WITH);
			setState(143);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportAsClauseContext extends ParserRuleContext {
		public IdentifierContext alias;
		public TerminalNode AS() { return getToken(bicepParser.AS, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ImportAsClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importAsClause; }
	}

	public final ImportAsClauseContext importAsClause() throws RecognitionException {
		ImportAsClauseContext _localctx = new ImportAsClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importAsClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(AS);
			setState(146);
			((ImportAsClauseContext)_localctx).alias = identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetadataDeclContext extends ParserRuleContext {
		public IdentifierContext name;
		public TerminalNode METADATA() { return getToken(bicepParser.METADATA, 0); }
		public TerminalNode ASSIGN() { return getToken(bicepParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NL() { return getToken(bicepParser.NL, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public MetadataDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metadataDecl; }
	}

	public final MetadataDeclContext metadataDecl() throws RecognitionException {
		MetadataDeclContext _localctx = new MetadataDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_metadataDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(METADATA);
			setState(149);
			((MetadataDeclContext)_localctx).name = identifier();
			setState(150);
			match(ASSIGN);
			setState(151);
			expression();
			setState(152);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
